src/bindings.rs

extern "C" {
    pub fn Cronet_Metrics_sending_end_set(
        self_: Cronet_MetricsPtr,
        sending_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_sending_end_move(
        self_: Cronet_MetricsPtr,
        sending_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_push_start_set(self_: Cronet_MetricsPtr, push_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_push_start_move(self_: Cronet_MetricsPtr, push_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_push_end_set(self_: Cronet_MetricsPtr, push_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_push_end_move(self_: Cronet_MetricsPtr, push_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_response_start_set(
        self_: Cronet_MetricsPtr,
        response_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_response_start_move(
        self_: Cronet_MetricsPtr,
        response_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_request_end_set(
        self_: Cronet_MetricsPtr,
        request_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_request_end_move(
        self_: Cronet_MetricsPtr,
        request_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_socket_reused_set(self_: Cronet_MetricsPtr, socket_reused: bool);
}
extern "C" {
    pub fn Cronet_Metrics_sent_byte_count_set(self_: Cronet_MetricsPtr, sent_byte_count: i64);
}
extern "C" {
    pub fn Cronet_Metrics_received_byte_count_set(
        self_: Cronet_MetricsPtr,
        received_byte_count: i64,
    );
}
extern "C" {
    pub fn Cronet_Metrics_request_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_dns_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_dns_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_connect_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_connect_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_ssl_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_ssl_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_sending_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_sending_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_push_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_push_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_response_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_request_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_socket_reused_get(self_: Cronet_MetricsPtr) -> bool;
}
extern "C" {
    pub fn Cronet_Metrics_sent_byte_count_get(self_: Cronet_MetricsPtr) -> i64;
}
extern "C" {
    pub fn Cronet_Metrics_received_byte_count_get(self_: Cronet_MetricsPtr) -> i64;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_Create() -> Cronet_RequestFinishedInfoPtr;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_Destroy(self_: Cronet_RequestFinishedInfoPtr);
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_metrics_set(
        self_: Cronet_RequestFinishedInfoPtr,
        metrics: Cronet_MetricsPtr,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_metrics_move(
        self_: Cronet_RequestFinishedInfoPtr,
        metrics: Cronet_MetricsPtr,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_add(
        self_: Cronet_RequestFinishedInfoPtr,
        element: Cronet_RawDataPtr,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_finished_reason_set(
        self_: Cronet_RequestFinishedInfoPtr,
        finished_reason: Cronet_RequestFinishedInfo_FINISHED_REASON,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_metrics_get(
        self_: Cronet_RequestFinishedInfoPtr,
    ) -> Cronet_MetricsPtr;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_size(self_: Cronet_RequestFinishedInfoPtr)
        -> u32;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_at(
        self_: Cronet_RequestFinishedInfoPtr,
        index: u32,
    ) -> Cronet_RawDataPtr;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_clear(self_: Cronet_RequestFinishedInfoPtr);
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_finished_reason_get(
        self_: Cronet_RequestFinishedInfoPtr,
    ) -> Cronet_RequestFinishedInfo_FINISHED_REASON;
}
